# darknet_ros

darknet_ros/: CMakeLists.txt  darknet_ros_nodelet.xml  package.xml
darknet_ros/config/: ros.yaml  yolo-roomba.yaml
darknet_ros/include/darknet_ros/: YoloObjectDetector.h
darknet_ros/launch/: darknet_camera_signalman_1x_realsense_nodelet.launch  darknet_camera_signalman_3x_realsense_nodelet.launch  darknet_ros_nodelet.launch
darknet_ros/src/: YoloObjectDetector.cpp
