<?xml version="1.0"?>
<package format="2">
    <name>darknet_ros</name>
    <version>1.0.0</version>
    <description>ROS package to use YOLO in Elikos' ROS codebase.</description>
    <maintainer email="info@elikos.polymtl.ca">Elikos</maintainer>
    <license>BSD</license>
    <url type="website">https://github.com/elikos/darknet_ros</url>
    <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
    <author email="info@elikos.polymtl.ca">Elikos</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>boost</depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>opencv2</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>message_generation</depend>
    <depend>darknet_ros_msgs</depend>
    <depend>elikos_msgs</depend>
    <depend>actionlib</depend>
    <depend>nodelet</depend>

    <export>
        <nodelet plugin="${prefix}/darknet_ros_nodelet.xml"/>
    </export>
</package>
